# internal/apiserver/models/model.go
@@ -2,23 +2,14 @@ package models
 
 import (
 	"time"
+
+	"github.com/dgrijalva/jwt-go"
 )
 
-// Order represents the model for an order
-type Order struct {
-	ID           string     `json:"id,omitempty" example:"1"`
-	CustomerName string     `json:"customerName,omitempty" example:"Leo Messi"`
-	OrderedAt    *time.Time `json:"orderedAt,omitempty" example:"2020-09-09T21:21:46+00:00"`
-	Items        []Item     `json:"items,omitempty"`
+type Claims struct {
+	Customer Customer
+	jwt.StandardClaims
 }
-
-// Item represents the model for an item in the order
-type Item struct {
-	ID          string `json:"id,omitempty" example:"A1B2C3"`
-	Description string `json:"description,omitempty" example:"A random description"`
-	Quantity    int    `json:"quantity,omitempty" example:"1"`
-}
-
 type SignInput struct {
 	Password string `json:"password,omitempty" example:"123456"`
 	Username string `json:"username,omitempty" example:"example@gmail.com"`
@@ -30,4 +21,9 @@ type Customer struct {
 	Password         string    `json:"password,omitempty" example:"123456"`
 	RegistrationDate time.Time `json:"registrationDate,omitempty" example:"2020-09-09T21:21:46+00:00"`
 	ReleaseDate      time.Time `json:"releaseDate,omitempty" example:"2020-09-09T22:21:46+00:00"`
+}
+
+type Podcast struct {
+	Title  string `json:"title,omitempty" example:"title"`
+	Author string `json:"author,omiempty" example:"example@gmail.com"`
 }
